variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:9: error: not found: value estSurIrange
  if (estSurIrange()){
      ^